@@ -2,16 +2,12 @@ package com.harmony.umbrella.util;
 
 import java.io.IOException;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 /**
  * 基础编码组件
  * 
  * @author Harmony
  *
  */
-@SuppressWarnings("restriction")
 public class Coder {
 
     // FIXME 添加md5, aes, rsa
@@ -23,28 +19,27 @@ public class Coder {
      *            待加密的文本
      * @return 加密后的文本
      */
+    @SuppressWarnings("restriction")
     public static String encryptBASE64(String key) {
-        return new BASE64Encoder().encode(key.getBytes());
+        if (Environments.JAVA_17 >= Environments.getMajorJavaVersion()) {
+            return new sun.misc.BASE64Encoder().encode(key.getBytes());
+        } else {
+            return new String(java.util.Base64.getEncoder().encode(key.getBytes()));
+        }
     }
 
-    public static String decryptBASE64(String key) throws IOException {
-        return new String(new BASE64Decoder().decodeBuffer(key));
+    @SuppressWarnings("restriction")
+    public static String decryptBASE64(String key) {
+        if (Environments.JAVA_17 >= Environments.getMajorJavaVersion()) {
+            try {
+                return new String(new sun.misc.BASE64Decoder().decodeBuffer(key));
+            } catch (IOException e) {
+                ReflectionUtils.rethrowRuntimeException(e);
+                throw new IllegalStateException(e);
+            }
+        } else {
+            return new String(java.util.Base64.getDecoder().decode(key));
+        }
     }
 
-    /**
-     * BASE64加密
-     * 
-     * @param key
-     *            待加密的字节数组
-     * @return 加密后的字节数据组
-     * @throws IOException
-     */
-    /*
-    public static byte[] encryptBASE64(byte[] key) throws IOException {
-     return new BASE64Encoder().encode(key).getBytes("UTF-8");
-    }
-
-    public static byte[] decryptBASE64(byte[] key) throws IOException {
-     return new BASE64Decoder().decodeBuffer(new ByteArrayInputStream(key));
-    }*/
 }
